--- a/.github/workflows/main_ckppeoplesuite.yml
+++ b/.github/workflows/main_ckppeoplesuite.yml
@@ -9,6 +9,8 @@ on:
 env:
   PYTHON_VERSION: "3.10"
   AZ_WEBAPP_NAME: "CKPPeopleSuite"
+  # Local uploaded screenshot path (will be transformed to a URL by the system where needed)
+  PROJECT_SCREENSHOT_URL: "/mnt/data/b9ae4ced-c90f-4794-aeb0-e8100eab8249.png"
 
 jobs:
   build:
@@ -17,11 +19,10 @@ jobs:
       contents: read
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-      # ----------------------------
-      # Install system deps for native Python packages (pycairo, etc.)
-      # ----------------------------
+      # Install system deps for native Python packages (pycairo, weasyprint, xmllint, jq, etc.)
       - name: Install system dependencies for native builds
         run: |
           sudo apt-get update
@@ -32,9 +33,13 @@ jobs:
             libcairo2-dev \
             libgirepository1.0-dev \
             libglib2.0-dev \
+            libpango1.0-0 \
+            libgdk-pixbuf2.0-0 \
             libpng-dev \
             libjpeg-dev \
             libffi-dev \
+            libxml2-utils \
+            jq \
             git \
             curl
 
@@ -43,7 +48,7 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Create and Start virtual environment and Install dependencies
+      - name: Create and activate virtual environment, install dependencies
         run: |
           python -m venv antenv
           source antenv/bin/activate
@@ -81,12 +86,13 @@ jobs:
         with:
           name: python-app
 
+      # Login to Azure using the single AZURE_CREDENTIALS JSON secret (recommended)
+      # Create this secret by running:
+      # az ad sp create-for-rbac --name "CKPPeopleSuite-SP" --role contributor --scopes /subscriptions/<SUB_ID> --sdk-auth
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_B73A844D7B4042E1A538960B63041480 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_0EA1EFF70B6249D5841F2861A29886E1 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E84FA381A384446FBED047D7993DFEB4 }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
@@ -95,60 +101,105 @@ jobs:
           app-name: ${{ env.AZ_WEBAPP_NAME }}
           slot-name: 'Production'
 
-      # Ensure az CLI available (login step provides it, but make sure)
       - name: Show az version
         run: az --version
 
       # ----------------------------
       # Post-deploy: attempt SSH command (Linux App Service with SSH enabled)
+      # Run collectstatic + migrate, then list files and save listings as artifacts
       # ----------------------------
-      - name: Run remote management commands via az webapp ssh (preferred for Linux)
+      - name: Run collectstatic, migrate and list deployed files (SSH -> Kudu fallback)
         if: always()
         env:
           AZ_SUBSCRIPTION: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E84FA381A384446FBED047D7993DFEB4 }}
           AZ_RESOURCE_GROUP: ${{ secrets.AZURE_RESOURCE_GROUP }}
           AZ_WEBAPP_NAME: ${{ env.AZ_WEBAPP_NAME }}
+          KUDU_PUBLISH_PROFILE: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}  # optional; required for Kudu fallback & file fetch
         run: |
-          echo "Trying az webapp ssh to run collectstatic & migrate..."
-          set -e
-          az webapp ssh --subscription "$AZ_SUBSCRIPTION" --resource-group "$AZ_RESOURCE_GROUP" --name "$AZ_WEBAPP_NAME" --command "python manage.py collectstatic --noinput && python manage.py migrate --noinput" && exit 0
-          echo "az webapp ssh failed or SSH not enabled. Will attempt Kudu fallback."
+          set -euo pipefail
+          echo "=== Post-deploy: Attempt SSH (preferred) or Kudu API fallback to run collectstatic & migrate and get file listings ==="
 
-      # ----------------------------
-      # KUDU fallback: use Kudu API to run commands (works for Windows & Linux App Service)
-      # Requires: AZURE_WEBAPP_PUBLISH_PROFILE (add this as a secret containing the publish profile XML)
-      # ----------------------------
-      - name: Kudu fallback - run collectstatic & migrate using Kudu API
+          SSH_OK=0
+          ARTIFACTS_DIR="$GITHUB_WORKSPACE/deploy-artifacts"
+          mkdir -p "$ARTIFACTS_DIR"
+
+          # Try SSH first (works on Linux App Service with SSH enabled)
+          echo "Trying az webapp ssh..."
+          if az webapp ssh --subscription "$AZ_SUBSCRIPTION" --resource-group "$AZ_RESOURCE_GROUP" --name "$AZ_WEBAPP_NAME" --command "python manage.py collectstatic --noinput && python manage.py migrate --noinput && echo '--- ROOT LIST ---' > /home/site/wwwroot/deployed-file-list.txt && ls -la /home/site/wwwroot >> /home/site/wwwroot/deployed-file-list.txt && echo '--- STATICFILES LIST ---' > /home/site/wwwroot/staticfiles-list.txt && if [ -d /home/site/wwwroot/staticfiles ]; then ls -la /home/site/wwwroot/staticfiles >> /home/site/wwwroot/staticfiles-list.txt; else echo 'staticfiles directory not present' >> /home/site/wwwroot/staticfiles-list.txt; fi"; then
+            echo "SSH executed commands successfully."
+            SSH_OK=1
+          else
+            echo "SSH failed (maybe not enabled) — attempting Kudu fallback."
+          fi
+
+          # If SSH succeeded and publish profile available, fetch the created list files via Kudu VFS
+          if [ "$SSH_OK" -eq 1 ] && [ -n "$KUDU_PUBLISH_PROFILE" ]; then
+            echo "$KUDU_PUBLISH_PROFILE" > pubxml.xml
+            # Try msdeploy URL first, fallback to publishUrl attribute
+            SCM_URL=$(xmllint --xpath "string(//publishProfile[@publishMethod='MSDeploy']/@msdeployServiceUrl)" pubxml.xml 2>/dev/null || true)
+            if [ -z "$SCM_URL" ]; then
+              SCM_URL=$(xmllint --xpath "string(//publishProfile/@publishUrl)" pubxml.xml 2>/dev/null || true)
+            fi
+            PUSER=$(xmllint --xpath "string(//publishProfile/@userName)" pubxml.xml)
+            PPASS=$(xmllint --xpath "string(//publishProfile/@userPWD)" pubxml.xml)
+            if [ -n "$SCM_URL" ] && [ -n "$PUSER" ] && [ -n "$PPASS" ]; then
+              echo "Fetching deployed listing files from Kudu VFS..."
+              curl -s -u "$PUSER:$PPASS" "$SCM_URL/api/vfs/site/wwwroot/deployed-file-list.txt" -o "$ARTIFACTS_DIR/deployed-file-list.txt" || true
+              curl -s -u "$PUSER:$PPASS" "$SCM_URL/api/vfs/site/wwwroot/staticfiles-list.txt" -o "$ARTIFACTS_DIR/staticfiles-list.txt" || true
+            else
+              echo "Could not parse publish profile to fetch files via Kudu."
+            fi
+          fi
+
+          # If SSH not available, use Kudu API to run commands and capture outputs
+          if [ "$SSH_OK" -eq 0 ]; then
+            echo "Running Kudu API fallback (requires AZURE_WEBAPP_PUBLISH_PROFILE secret)..."
+            if [ -z "$KUDU_PUBLISH_PROFILE" ]; then
+              echo "No KUDU_PUBLISH_PROFILE secret set; skipping Kudu fallback."
+            else
+              echo "$KUDU_PUBLISH_PROFILE" > pubxml.xml
+              SCM_URL=$(xmllint --xpath "string(//publishProfile[@publishMethod='MSDeploy']/@msdeployServiceUrl)" pubxml.xml 2>/dev/null || true)
+              if [ -z "$SCM_URL" ]; then
+                SCM_URL=$(xmllint --xpath "string(//publishProfile/@publishUrl)" pubxml.xml 2>/dev/null || true)
+              fi
+              PUSER=$(xmllint --xpath "string(//publishProfile/@userName)" pubxml.xml)
+              PPASS=$(xmllint --xpath "string(//publishProfile/@userPWD)" pubxml.xml)
+
+              if [ -z "$SCM_URL" ] || [ -z "$PUSER" ] || [ -z "$PPASS" ]; then
+                echo "Publish profile parse failed; skipping Kudu fallback."
+              else
+                echo "Calling Kudu /api/command to run collectstatic..."
+                curl -s -X POST -u "$PUSER:$PPASS" "$SCM_URL/api/command" -H "Content-Type: application/json" -d '{"command":"python manage.py collectstatic --noinput","dir":"/home/site/wwwroot"}' -o "$ARTIFACTS_DIR/kudu-collectstatic.json" || true
+
+                echo "Calling Kudu /api/command to run migrate..."
+                curl -s -X POST -u "$PUSER:$PPASS" "$SCM_URL/api/command" -H "Content-Type: application/json" -d '{"command":"python manage.py migrate --noinput","dir":"/home/site/wwwroot"}' -o "$ARTIFACTS_DIR/kudu-migrate.json" || true
+
+                echo "Getting VFS listing of /site/wwwroot..."
+                curl -s -u "$PUSER:$PPASS" "$SCM_URL/api/vfs/site/wwwroot/" -o "$ARTIFACTS_DIR/kudu-vfs-root.json" || true
+                curl -s -u "$PUSER:$PPASS" "$SCM_URL/api/vfs/site/wwwroot/staticfiles" -o "$ARTIFACTS_DIR/kudu-vfs-staticfiles.json" || true
+              fi
+            fi
+          fi
+
+          # Always capture the workspace files (local copy) as a fallback reference
+          echo "Creating local workspace listing for reference..."
+          ls -la "$GITHUB_WORKSPACE" > "$ARTIFACTS_DIR/workspace-listing.txt" || true
+          find "$GITHUB_WORKSPACE" -maxdepth 5 -type f -print > "$ARTIFACTS_DIR/workspace-files.txt" || true
+
+          echo "Artifacts folder contents:"
+          ls -la "$ARTIFACTS_DIR" || true
+
+          # Create marker so next step can upload artifacts
+          echo "$ARTIFACTS_DIR" > "$GITHUB_WORKSPACE/deploy_artifacts_path.txt"
+
+      - name: Upload deployed file lists artifact
         if: always()
-        env:
-          AZ_WEBAPP_NAME: ${{ env.AZ_WEBAPP_NAME }}
-          KUDU_PUBLISH_PROFILE: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}  # must be set in repo secrets
-        run: |
-          if [ -z "$KUDU_PUBLISH_PROFILE" ]; then
-            echo "No KUDU publish profile secret found. Skipping Kudu commands."
-            exit 0
-          fi
-          echo "Parsing publish profile for scm url and credentials..."
-          echo "$KUDU_PUBLISH_PROFILE" > pubxml.xml
-          SCM_URL=$(xmllint --xpath "string(//publishProfile[@publishMethod='MSDeploy']/@msdeployServiceUrl)" pubxml.xml 2>/dev/null || true)
-          # fallback: look for publishProfile with publishMethod="MSDeploy" or "FTP"
-          if [ -z "$SCM_URL" ]; then
-            SCM_URL=$(xmllint --xpath "string(//publishProfile/@publishUrl)" pubxml.xml 2>/dev/null || true)
-          fi
-          PUSER=$(xmllint --xpath "string(//publishProfile/@userName)" pubxml.xml)
-          PPASS=$(xmllint --xpath "string(//publishProfile/@userPWD)" pubxml.xml)
-          if [ -z "$SCM_URL" ] || [ -z "$PUSER" ] || [ -z "$PPASS" ]; then
-            echo "Could not parse publish profile. Skipping Kudu commands."
-            exit 0
-          fi
-          echo "SCM URL: $SCM_URL"
+        uses: actions/upload-artifact@v4
+        with:
+          name: deployed-file-lists
+          path: ${{ github.workspace }}/deploy-artifacts
 
-          # Kudu API: /api/command to run commands
-          echo "Running collectstatic via Kudu API..."
-          curl -s -X POST -u "$PUSER:$PPASS" "$SCM_URL/api/command" -H "Content-Type: application/json" -d '{"command":"python manage.py collectstatic --noinput","dir":"/home/site/wwwroot"}' | jq -r
-          echo "Running migrate via Kudu API..."
-          curl -s -X POST -u "$PUSER:$PPASS" "$SCM_URL/api/command" -H "Content-Type: application/json" -d '{"command":"python manage.py migrate --noinput","dir":"/home/site/wwwroot"}' | jq -r
-
+      # Finally restart the web app (requires the service principal to have appropriate permissions)
       - name: Restart Web App
         env:
           AZ_SUBSCRIPTION: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E84FA381A384446FBED047D7993DFEB4 }}
